--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,17 +7,32 @@
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+header,
+footer,
+.grid {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 nav a {
+    display: block;
     color: white;
     display: block;
     padding: 20px;
     width: auto;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 1000;
 }
 
 h1 {
     color: darkblue;
+    border-bottom: darkblue solid;
 }
 
 h2 {
@@ -38,15 +53,22 @@ p {
     padding: 0px;
 }
 
+.grid {
+    display: grid;
+    align-items: center;
+}
+
 main {
-    max-width: 500px;
+    grid-column: 2/3;
     margin: 10px;
+    font-size: 1.2rem;
 }
 
 aside {
-    width: 500px;
-    text-align: center;
+    width: 20rem;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside h2 {
@@ -63,7 +85,6 @@ aside img {
 footer {
     margin-top: 10px;
     border-top: 2px dotted black;
-    width: auto;
     text-align: center;
 }
 
